--- a/src/components/NotesBoard.css
+++ b/src/components/NotesBoard.css
@@ -17,6 +17,7 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     height: 250px;
     border: 2px dotted gray;
     border-radius: 15px;
+    box-sizing: border-box;
     background-image: url(https://img.icons8.com/?size=100&id=11153&format=png&color=000000);
     background-size: 50%;
     background-repeat: no-repeat;
@@ -28,35 +29,60 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     cursor: pointer;
 }
 
-
 .noteItemContainer {
-    font-family: Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /*align-items: flex-start;*/
+    box-sizing: border-box;
     width: 250px;
     height: 250px;
-    box-sizing: border-box;
     padding: 20px;
     border: 1px solid black;
     border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /*horizontal alignment*/
-    align-items: center; /*vertical alignment*/
+    font-family: Arial, sans-serif;
 }
 
-.noteItemContainer:hover > .footer > .noteButtonMenu {
-    visibility: visible;
+.noteItemContainer:hover {
+    #pin {
+        visibility: visible;
+    }
+    .noteButtonMenu {
+        visibility: visible;
+    }
+    background-color: lightgoldenrodyellow;
+    backdrop-filter: opacity(50%);
 }
+
+.top {
+    display: flex;
+}
+
+#pin {
+    visibility: hidden;
+    margin: 10px;
+}
+
 
 .title, .body {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-radius: 5px;
+    background-color: #e2e2e2;
+    padding: 0.1em;
 }
 
 .title {
-    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    line-height: 1.2;
+    max-height: calc(1.2em * 2);
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .body {
+    font-size: 16px;
     text-align: left;
 }
 
@@ -67,12 +93,18 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     align-items: center;
 }
 
+.category {
+    font-weight: bolder;
+    border: 1px solid #535bf2;
+    padding: 0.2em;
+    border-radius: 5px;
+}
+
 .noteButtonMenu {
     display: flex;
     justify-content: space-between;
     padding: 10px;
     visibility: hidden;
-
 }
 
 .noteButton {
@@ -80,8 +112,8 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 15%;
     border: 1px solid coral;
     cursor: pointer;
