--- a/src/components/NotesBoard.css
+++ b/src/components/NotesBoard.css
@@ -11,7 +11,7 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     justify-content: space-evenly;
     align-content: flex-start;
     gap: 100px;
-    padding: 0 50px 50px;
+    padding: 50px;
     font-size: 20px;
 }
 .newNoteContainer {
@@ -81,11 +81,15 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     max-height: calc(1.2em * 2);
     overflow: hidden;
     text-overflow: ellipsis;
+    box-sizing: content-box;
+    /*padding-bottom: 20px;*/
+    margin-bottom: .5em;
 }
 
 .body {
     font-size: 0.8em;
     text-align: left;
+    height: 100px;
 }
 
 .footer {
