--- a/src/components/NotesBoard.css
+++ b/src/components/NotesBoard.css
@@ -4,30 +4,36 @@ Pin icon, white: https://img.icons8.com/?size=100&id=0BngLkWjYAnC&format=png&col
 Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap');
+
 .notesBoard {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: flex-start;
-    gap: 100px;
-    padding: 50px;
+    gap: 50px;
+    padding: 100px 50px 50px 150px;
     font-size: 20px;
+    color: white;
 }
+
 .newNoteContainer {
-    width: 250px;
-    height: 250px;
-    border: 2px dotted gray;
+    width: 200px;
+    height: 200px;
+    border: 3px dashed white;
     border-radius: 15px;
-    box-sizing: border-box;
     background-image: url(https://img.icons8.com/?size=100&id=11153&format=png&color=000000);
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
 }
 
 .newNoteContainer:hover {
-    background-color: lightgoldenrodyellow;
+    background-color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
 }
 
@@ -35,83 +41,78 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /*align-items: flex-start;*/
-    box-sizing: border-box;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     padding: 20px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     border-radius: 15px;
-    font-family: Arial, sans-serif;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
 }
 
 .noteItemContainer:hover {
-    #pin {
+    #pin, .noteButton {
         visibility: visible;
     }
-    .noteButtonMenu {
-        visibility: visible;
-    }
-    background-color: lightgoldenrodyellow;
-    backdrop-filter: opacity(50%);
+    box-shadow: white 0px 0px 30px;
 }
 
 .top {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #pin {
     visibility: hidden;
-    margin: 10px;
+    margin-left: 5px;
+    width: 50px;
+    height: 50px;
+    background-image: url("https://img.icons8.com/?size=100&id=0BngLkWjYAnC&format=png&color=000000");
 }
 
-
 .title, .body {
-    /*border: 1px solid black;*/
+    background-color: rgba(0,0,0,0.3);
     border-radius: 5px;
-    background-color: #e2e2e2;
-    padding: 0.1em;
+    text-align: left;
+    line-height: 1.2;
+    overflow: clip;
+    text-overflow: ellipsis;
+    padding: 0.2em;
 }
 
 .title {
     font-size: 1em;
     font-weight: bold;
-    text-align: left;
-    line-height: 1.2;
+    min-height: 1em;
     max-height: calc(1.2em * 2);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    box-sizing: content-box;
-    /*padding-bottom: 20px;*/
-    margin-bottom: .5em;
 }
 
 .body {
     font-size: 0.8em;
-    text-align: left;
     height: 100px;
+    max-height: calc(1.2em * 5);
 }
 
 .footer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .category {
     font-size: 0.7em;
-    font-weight: bolder;
-    border: 1px solid #535bf2;
+    font-weight: lighter;
+    border: 1px solid transparent;
     padding: 0.2em;
     border-radius: 5px;
-    margin-right: 5px;
+    background-color: #183C5C;
 }
 
 .noteButtonMenu {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    gap: 5px;
     visibility: hidden;
 }
 
@@ -123,9 +124,8 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
     width: 30px;
     height: 30px;
     border-radius: 15%;
-    border: 1px solid coral;
+    border: none;
     cursor: pointer;
-    /*margin: 0 2px;*/
 }
 #edit {
     background-image: url('https://img.icons8.com/?size=100&id=P1bJzKUoOQYz&format=png&color=000000');
@@ -138,4 +138,8 @@ Plus icon: https://img.icons8.com/?size=100&id=11153&format=png&color=000000
 }
 #menu {
     background-image: url('https://img.icons8.com/?size=100&id=98963&format=png&color=000000');
+}
+
+.noteButton:hover {
+    background-color: rgba(255,255,255,0.5);
 }
