--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url("./assets/kork-platte-hintergrund-pinwand.jpg");
-  background-repeat: repeat;
-  background-size: 10%;
+  /*background-image: url("./assets/kork-platte-hintergrund-pinwand.jpg");*/
+  background-image: url("./assets/chalkboard-background.jpg");
+  background-repeat: repeat-y;
+  background-size: cover;
 }
