--- a/src/components/NoteEditWindow.css
+++ b/src/components/NoteEditWindow.css
@@ -2,10 +2,6 @@
 Close icon: https://img.icons8.com/?size=100&id=23537&format=png&color=000000
 */
 
-body {
-    /*overflow: hidden;*/
-}
-
 .overlay {
     font-family: inherit;
     position: fixed;
@@ -27,9 +23,9 @@ body {
     width: 700px;
     height: 500px;
     padding: 20px;
-    background-color: white;
+    background-color: wheat;
     box-sizing: border-box;
-    border-radius: 50px;
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -37,12 +33,18 @@ body {
 }
 
 .window-header {
-    color: black;
     width: 100%;
-    font-size: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header {
+    align-content: center;
+    height: 100%;
+    font-family: inherit;
+    font-size: 40px;
+    color: black;
 }
 
 .header-spacer-left {
@@ -60,6 +62,10 @@ body {
     background-color: transparent;
     cursor: pointer;
 }
+.close-button:hover {
+    background-color: red;
+    background-image: url("https://img.icons8.com/?size=100&id=23537&format=png&color=FFFFFF");
+}
 
 .title-container {
     width: 100%;
@@ -75,14 +81,15 @@ body {
     width: 550px;
     height: 50px;
     border-radius: 10px;
-    /*margin-right: 20px;*/
+    border: none;
+    padding: 0 10px;
 }
 
-.title-input #pin {
+#edit-pin {
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 15%;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
     margin-left: 5px;
@@ -98,14 +105,49 @@ body {
 
 .body-input {
     font-family: inherit;
-    font-size: 20px;
+    font-size: 25px;
     resize: none;
     width: 100%;
     height: 200px;
     border-radius: 10px;
+    border: none;
+    padding: 10px;
 }
 
-.title-input:focus, .body-input:focus {
+.title-input:focus, .body-input:focus, .category-input:focus {
     outline: none;
 }
 
+.category-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.category-input {
+    font-family: inherit;
+    font-size: 20px;
+    height: 40px;
+    width: 50%;
+    border-radius: 10px;
+    border: none;
+    padding: 0 10px;
+}
+
+.submit-button {
+    background-color: coral;
+    font-weight: 900;
+    font-family: inherit;
+    font-size: 20px;
+    height: 50px;
+    width: 100px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    background-color: #fd4807;
+    color: #ffffff;
+}
