--- a/src/components/NoteEditWindow.css
+++ b/src/components/NoteEditWindow.css
@@ -1,5 +1,6 @@
 /*
 Close icon: https://img.icons8.com/?size=100&id=23537&format=png&color=000000
+Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
 */
 
 .overlay {
@@ -56,15 +57,15 @@ Close icon: https://img.icons8.com/?size=100&id=23537&format=png&color=000000
     height: 50px;
     border: none;
     border-radius: 10px;
-    background-image: url("https://img.icons8.com/?size=100&id=23537&format=png&color=000000");
+    background-image: url("https://img.icons8.com/?size=100&id=6483&format=png&color=000000");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: transparent;
+    background-color: rgba(255, 0, 0, 0.5);
     cursor: pointer;
 }
 .close-button:hover {
     background-color: red;
-    background-image: url("https://img.icons8.com/?size=100&id=23537&format=png&color=FFFFFF");
+    background-image: url("https://img.icons8.com/?size=100&id=6483&format=png&color=FFFFFF");
 }
 
 .title-container {
@@ -136,7 +137,7 @@ Close icon: https://img.icons8.com/?size=100&id=23537&format=png&color=000000
 }
 
 .submit-button {
-    background-color: coral;
+    background-color: rgba(255, 127, 80, 0.5);
     font-weight: 900;
     font-family: inherit;
     font-size: 20px;
@@ -148,6 +149,6 @@ Close icon: https://img.icons8.com/?size=100&id=23537&format=png&color=000000
 }
 
 .submit-button:hover {
-    background-color: #fd4807;
+    background-color: coral;
     color: #ffffff;
 }
