--- a/src/components/NoteEditWindow.css
+++ b/src/components/NoteEditWindow.css
@@ -21,6 +21,7 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
 }
 
 .editor-container {
+    font-size: 30px;
     width: 700px;
     height: 500px;
     padding: 20px;
@@ -53,6 +54,8 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
 }
 
 .close-button {
+    display: flex;
+    align-items: center;
     width: 50px;
     height: 50px;
     border: none;
@@ -68,18 +71,19 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
     background-image: url("https://img.icons8.com/?size=100&id=6483&format=png&color=FFFFFF");
 }
 
-.title-container {
+.top-container {
     width: 100%;
     height: 60px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     column-gap: 10px;
 }
 
 .title-input {
+    text-align: center;
     font-size: 30px;
-    width: 550px;
+    width: inherit;
     height: 50px;
     border-radius: 10px;
     border: none;
@@ -119,10 +123,11 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
     outline: none;
 }
 
-.category-container {
+.bottom-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
     width: 100%;
 }
 
@@ -130,13 +135,23 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
     font-family: inherit;
     font-size: 20px;
     height: 40px;
-    width: 50%;
+    width: inherit;
     border-radius: 10px;
     border: none;
     padding: 0 10px;
 }
 
-.submit-button {
+.date-stamp {
+    color: gray;
+    font-size: .45em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.submit {
     background-color: rgba(255, 127, 80, 0.5);
     font-weight: 900;
     font-family: inherit;
@@ -148,7 +163,14 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
     cursor: pointer;
 }
 
-.submit-button:hover {
+.submit:hover {
     background-color: coral;
     color: #ffffff;
 }
+
+.submit:disabled {
+    background-color: rgb(184, 184, 184);
+    color: rgba(0, 0, 0, 0.5);
+    cursor: not-allowed;
+}
+
