--- a/src/components/NotesBoard.css
+++ b/src/components/NotesBoard.css
@@ -29,11 +29,10 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
 }
 
 .newNoteContainer {
-    box-sizing: content-box;
+    box-sizing: border-box;
     margin: 0;
-    width: 200px;
-    height: 200px;
-    padding: 20px;
+    width: 250px;
+    height: 250px;
     border: 3px dashed white;
     border-radius: 15px;
     background-image: url('https://img.icons8.com/?size=100&id=11153&format=png&color=FFFFFF');
@@ -52,10 +51,12 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
 .noteItemContainer {
     display: flex;
     flex-direction: column;
+    row-gap: 10px;
     justify-content: space-between;
-    width: 200px;
-    height: 200px;
-    padding: 20px;
+    width: 250px;
+    height: 250px;
+    padding: 5px 20px;
+    box-sizing: border-box;
     border: 3px solid transparent;
     border-radius: 15px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
@@ -74,6 +75,12 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
         overflow: hidden;
         text-overflow: ellipsis;
     }
+}
+
+.timeStamp {
+    color: gray;
+    font-size: .6em;
+    text-align: center;
 }
 
 .top {
@@ -175,6 +182,11 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
 }
 .noteButton:hover {
     background-color: coral;
+}
+.noteButton:disabled {
+    background-color: gray;
+    opacity: 0.6;
+    cursor: not-allowed;
 }
 
 #edit {
