--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans&family=Outfit:wght@100..900&family=Pangolin&family=Roboto:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans&family=Outfit:wght@100..900&family=Pangolin&display=swap');
 
 body {
-  font-family: 'Funnel Sans', Serif, sans-serif;
+  font-family: 'Funnel Sans', sans-serif;
   margin: 0;
   padding: 0;
   min-width: 320px;
