Added colored notes and animations
Notes can now be colored but only at creation, and this color is permanent for the moment. The user can't change them.
Also added animation when notes are loaded.

--- a/src/components/NoteEditWindow.css
+++ b/src/components/NoteEditWindow.css
@@ -142,7 +142,7 @@ Close icon 2: https://img.icons8.com/?size=100&id=6483&format=png&color=000000
 }
 
 .date-stamp {
-    color: gray;
+    color: #404040;
     font-size: .45em;
     text-align: center;
     display: flex;
