--- a/src/components/NotesBoard.css
+++ b/src/components/NotesBoard.css
@@ -16,6 +16,22 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
 
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap');
 
+@keyframes expandRipple {
+    0% {
+        transform: scale(0); /* Start invisible and small */
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1); /* Full size */
+        opacity: 1;
+    }
+}
+.notesBoard .noteItemContainer,
+.notesBoard .newNoteContainer {
+    animation: expandRipple 333ms ease-in-out;
+    animation-fill-mode: both;
+}
+
 .notesBoard {
     display: flex;
     flex-wrap: wrap;
@@ -78,7 +94,7 @@ This CSS applies to NotesBoard.jsx and NoteItem.jsx
 }
 
 .timeStamp {
-    color: gray;
+    color: #404040;
     font-size: .6em;
     text-align: center;
 }
